--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
 
     //tests
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
@@ -81,9 +81,9 @@ dependencies {
     kapt 'com.github.bumptech.glide:compiler:4.7.1'
 
     //room
-    implementation "android.arch.persistence.room:runtime:1.1.1-rc1"
-    kapt "android.arch.persistence.room:compiler:1.1.1-rc1"
-    implementation "android.arch.persistence.room:rxjava2:1.1.1-rc1"
+    implementation "android.arch.persistence.room:runtime:1.1.1"
+    kapt "android.arch.persistence.room:compiler:1.1.1"
+    implementation "android.arch.persistence.room:rxjava2:1.1.1"
 
     //cicerone
     implementation'ru.terrakok.cicerone:cicerone:3.0.0'
