--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".presentation.feature.main.view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,9 +20,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".presentation.feature.moviesFromRoom.view.MoviesFromRoomActivity"
-            android:parentActivityName=".presentation.feature.main.view.MainActivity" />
+            android:parentActivityName=".presentation.feature.main.view.MainActivity">
+
+            <meta-data android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+
+        </activity>
+
         <activity
             android:name=".presentation.feature.movies.view.MoviesActivity"
             android:parentActivityName=".presentation.feature.main.view.MainActivity" />
